10-vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Provisioner = "terraform"
    Project     = var.project_name
    Name        = var.project_name
  }
}
